

public interface IPlayer
{
    public float level { get; set; }
    public float currentExp { get; set; }
    public float maxExp { get; set; }


}
