@startuml SkyAdventure

interface ITeamMember
{
    +teamType : TeamType 
}

interface IMovable
{

}

interface IAttackable
{

}

interface ICarryable
{

}

abstract class UnitBaseData
{

}

interface IPlayer
{
}

abstract class UnitBase
{
    UnitBaseData unitBaseData;
    UnitBaseData currentUnitBaseData;
}

abstract class EnemyBase
{

}

class Player
{

}

class BasicEnemy
{

}

class StealthEnemy
{

}

class BigSizeEnemy
{

}

class Eagle
{

}

class Boss
{

}

ITeamMember <|.. UnitBase
UnitBase *-- UnitBaseData 
UnitBase <|-- Player
UnitBase <|-- EnemyBase

IMovable <|.. BasicEnemy
IMovable <|.. IPlayer
IAttackable <|.. IPlayer
ICarryable <|.. IPlayer

IPlayer <|.. Player

IAttackable <|.. BasicEnemy

EnemyBase <|-- BasicEnemy


EnemyBase <|-- StealthEnemy
EnemyBase <|-- BigSizeEnemy
EnemyBase <|-- Eagle
EnemyBase <|-- Boss

@enduml